--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- 'links' aren't links, are connections to files; 'a' is a clickable (hyper)link -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/glogo.png">
     <!-- href= hyperlink reference -->
     <script src="js/script.js"></script>
     <title>ourGoogle</title>
@@ -20,13 +22,13 @@
     <ul class="rightList">
       <a href="#"><li>Gmail</li></a>
       <a href="#"><li>Images</li></a>
-      <a href="#"><li>Menu</li></a>
-      <li>Notifications</li>
-      <li>Profile Pic</li>
+      <a href="#"><li><img src="images/gridicon.png" alt="Google Animated Logo"></li></a>
+      <li><img src="images/cutealerticon.png" alt="Google Animated Logo"></li>
+      <li><img src="images/usericon.png" alt="Google Animated Logo"></li>
     </ul>
   </nav>
   <main>
-    <div id="googleLogo"><img src="images/googleicon.gif" alt="Google Animated Logo"></div>
+    <div id="googleLogo"><img src="images/googlelogo.png" alt="Google Animated Logo"></div>
     <form name= "search-form" method="post" action="/">
       <!-- variables that will send away from html (not css), use hyphens over camelCase
           two types of methods: get & post; sending/getting info to server, different to links
@@ -36,7 +38,7 @@
       <input id="hiddenInput" type="submit"></input>
       <div>
         <button type="submit">ourGoogle Search</button>
-        <button type="submit">I'm Feelin' Fortunate<button>
+        <button type="submit">I'm Feelin' Fortunate<button>``
     </div>
     </form>
     <p>Google offered in <a href="#">Fran&#231;ais</a></p>
