--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link id="favIcon" rel="icon" href="images/glogo.png">
     <!-- href= hyperlink reference -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <title>ourGoogle</title>
     <!-- browser tab name -->
