--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
   <nav>
     <ul class="leftList">
-      <a href="#"><li>About</li></a>
-      <a href="#"><li>Store</li></a>
+      <a href="http://thethingis.ca"><li>About</li></a>
+      <a href="http://thethingis.ca"><li>Store</li></a>
     </ul>
     <ul class="rightList">
-      <a href="#"><li>Gmail</li></a>
-      <a href="#"><li>Images</li></a>
+      <a href="http://thethingis.ca"><li>Gmail</li></a>
+      <a href="http://thethingis.ca"><li>Images</li></a>
       <li id="gridIcon"><img src="images/gridicon.png" alt="grid menu icon google homepage"></li>
       <li id="alertIcon"><img src="images/bellIcon.png" alt="bell alert icon"></li>
       <li id="profileIcon"><img src="images/dogIcon.png" alt="cute scruffy dog icon"></li>
@@ -45,7 +45,7 @@
           <button type="submit">I'm Feelin' Somethin' Alright</button>
         </center>
       </form>
-      <center><p>Google offered in: <a href="#">Fran&#231;ais</a></p></center>
+      <center><p>Google offered in: <a href="http://thethingis.ca">Fran&#231;ais</a></p></center>
     </main>
   </center>
 
@@ -53,13 +53,13 @@
     <div class="region"><ul><li>Canada</li></ul></div>
     <div>
       <ul class="leftList">
-        <a href="#"><li>Advertising</li></a>
-        <a href="#"><li>Business</li></a>
+        <a href="http://thethingis.ca"><li>Advertising</li></a>
+        <a href="http://thethingis.ca"><li>Business</li></a>
       </ul>
       <ul class="rightList">
-        <a href="#"><li>Privacy</li></a>
-        <a href="#"><li>Terms</li></a>
-        <a href="#"><li>Settings</li></a>
+        <a href="http://thethingis.ca"><li>Privacy</li></a>
+        <a href="http://thethingis.ca"><li>Terms</li></a>
+        <a href="http://thethingis.ca"><li>Settings</li></a>
       </ul>
     </div>
   </footer>
